--- a/cmd/fireplace-viewer/www/fireplace-viewer/layouts/mainLayout.gohtml
+++ b/cmd/fireplace-viewer/www/fireplace-viewer/layouts/mainLayout.gohtml
@@ -6,6 +6,7 @@
 
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400italic,400,700" rel="stylesheet" type="text/css" />
 	<link href="/www/grommet/css/grommet.min.css" rel="stylesheet" type="text/css" />
+	<link rel="shortcut icon" href="/www/fireplace-viewer/images/fire_pit.ico" />
 
 	<script src="/www/moment/min/moment-with-locales.min.js"></script>
 	<script src="/www/react/react-with-addons.js"></script>
