--- a/cmd/fireplace-viewer/www/fireplace-viewer/layouts/mainLayout.gohtml
+++ b/cmd/fireplace-viewer/www/fireplace-viewer/layouts/mainLayout.gohtml
@@ -4,18 +4,29 @@
 	<meta charset="UTF-8" />
 	<title>Fireplace Viewer // {{.Title}}</title>
 
-	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400italic,400,700" rel="stylesheet" type="text/css" />
-	<link href="/www/grommet/css/grommet.min.css" rel="stylesheet" type="text/css" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="shortcut icon" href="/www/fireplace-viewer/images/fire_pit.ico" />
 
-	<script src="/www/moment/min/moment-with-locales.min.js"></script>
+	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400italic,400,700" rel="stylesheet" type="text/css" />
+	<link href="/www/grommet/css/grommet.min.css" rel="stylesheet" type="text/css" />
+	<link href="/www/fireplace-viewer/css/styles.css" rel="stylesheet" type="text/css" />
+
 	<script src="/www/react/react-with-addons.js"></script>
 	<script src="/www/react/react-dom.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 	<script src="/www/grommet/grommet.min.js"></script>
+	<script src="/www/moment/min/moment-with-locales.min.js"></script>
+	<script src="/www/babel-browser/browser.js"></script>
+	<script src="/www/fireplace-viewer/services/LogEntryService.js" type="text/babel"></script>
 	<script src="/www/fireplace-viewer/components/FormatDateTime.js" type="text/babel"></script>
+	<script src="/www/fireplace-viewer/components/Paging.js" type="text/babel"></script>
+	<script src="/www/fireplace-viewer/components/LogEntryDetails.js" type="text/babel"></script>
+	<script src="/www/fireplace-viewer/components/ApplicationSelector.js" type="text/babel"></script>
+	<script src="/www/fireplace-viewer/components/LevelSelector.js" type="text/babel"></script>
+	<script src="/www/fireplace-viewer/components/Filter.js" type="text/babel"></script>
 	<script src="/www/fireplace-viewer/components/Header.js" type="text/babel"></script>
-	<script src="/www/fireplace-viewer/components/Footer.js" type="text/babel"></script>
+	<script src="/www/fireplace-viewer/components/EntriesList.js" type="text/babel"></script>
+	<script src="/www/fireplace-viewer/components/EntryListItem.js" type="text/babel"></script>
 </head>
 <body>
 	{{template "body" .}}
