Using webpack to build JS now

--- a/cmd/fireplace-viewer/www/fireplace-viewer/pages/delete-old-entries.gohtml
+++ b/cmd/fireplace-viewer/www/fireplace-viewer/pages/delete-old-entries.gohtml
@@ -3,5 +3,5 @@
 {{end}}
 
 {{define "scripts"}}
-	<script type="text/babel" src="/www/fireplace-viewer/components/DeleteOldEntriesPage.js"></script>
+	<script src="/www/fireplace-viewer/dist/DeleteOldEntriesPage.bundle.js" type="text/javascript"></script>
 {{end}}
