--- a/cmd/fireplace-viewer/www/fireplace-viewer/pages/main-page.gohtml
+++ b/cmd/fireplace-viewer/www/fireplace-viewer/pages/main-page.gohtml
@@ -3,5 +3,5 @@
 {{end}}
 
 {{define "scripts"}}
-	<script type="text/babel" src="/www/fireplace-viewer/components/ViewerPage.js"></script>
+	<script src="/www/fireplace-viewer/dist/ViewerPage.bundle.js" type="text/javascript"></script>
 {{end}}
