Using webpack to build now

--- a/cmd/fireplace-viewer/www/fireplace-viewer/layouts/mainLayout.gohtml
+++ b/cmd/fireplace-viewer/www/fireplace-viewer/layouts/mainLayout.gohtml
@@ -12,9 +12,12 @@
 	<link href="/www/grommet/css/grommet.min.css" rel="stylesheet" type="text/css" />
 	<link href="/www/fireplace-viewer/css/styles.css" rel="stylesheet" type="text/css" />
 
+	<!--
 	<script src="/www/react/react-with-addons.js"></script>
 	<script src="/www/react/react-dom.js"></script>
+	<script src="/www/react/react-dom.js"></script>
 	<script src="/www/grommet/grommet.min.js"></script>
+	-->
 	<script src="/www/moment/min/moment-with-locales.min.js"></script>
 	<!--
 	<script src="/www/babel-browser/browser.js"></script>
