--- a/cmd/fireplace-viewer/www/fireplace-viewer/pages/main-page.gohtml
+++ b/cmd/fireplace-viewer/www/fireplace-viewer/pages/main-page.gohtml
@@ -1,7 +1,7 @@
 {{define "body"}}
-	<div id="content"></div>
+	<div id="root"></div>
 {{end}}
 
 {{define "scripts"}}
-	<script src="/www/fireplace-viewer/dist/ViewerPage.bundle.js" type="text/javascript"></script>
+	<script src="/www/fireplace-viewer/dist/main.bundle.js" type="text/javascript"></script>
 {{end}}
