Conversion is coming along. I have entries loaded up!

--- a/cmd/fireplace-viewer/www/fireplace-viewer/css/styles.css
+++ b/cmd/fireplace-viewer/www/fireplace-viewer/css/styles.css
@@ -1,3 +1,40 @@
+/******************************************************************************
+ * Bootstrap overrides
+ *****************************************************************************/
+.table td {
+	padding: 0.75rem 0.2rem 0rem 0.2rem;
+}
+
+/******************************************************************************
+ * Global styles
+ *****************************************************************************/
 body {
 	padding-top: 70px;
+}
+
+/******************************************************************************
+ * Log Table Styles
+ *****************************************************************************/
+.icon-error-status {
+	color: #ef4d3b;
+}
+
+.icon-warning-status {
+	color: #fcfc4b;
+}
+
+.icon-debug-status {
+	color: #33f7e3
+}
+
+.icon-info-status {
+	color: #0de815;
+}
+
+.column-icon {
+	width: 1%;
+}
+
+.column-message {
+	width: 99%;
 }
