--- a/cmd/fireplace-viewer/app/static/css/styles.css
+++ b/cmd/fireplace-viewer/app/static/css/styles.css
@@ -55,7 +55,8 @@ input {
 #levelSelect,
 #applicationSelect,
 #generalSearch,
-#resetButton {
+#resetButton,
+#password {
 	border-radius: 8px;
 	background-color: white;
 	border: 1px solid var(--border-color);
@@ -70,6 +71,21 @@ input {
 #topNav h1 {
 	color: var(--menu-background-color);
 	font-family: "Helvetica Neue", sans-serif;
+}
+
+/* Login */
+.login-container {
+	width: 50%;
+	margin: 0 auto;
+	background-color: var(--light-border-color);
+	padding: 1rem;
+	box-sizing: border-box;
+	border-radius: 4px;
+	border: 1px solid var(--border-color);
+}
+
+.login-container button {
+	background-color: var(--primary-color);
 }
 
 /* Log entry level colors */
