--- a/cmd/fireplacelogging/app/static/css/styles.css
+++ b/cmd/fireplacelogging/app/static/css/styles.css
@@ -58,6 +58,13 @@ html, body {
   overflow-x: hidden;
 }
 
+#app {
+  opacity: 0;
+  transition: opacity 1.0s;
+  width: 100%;
+  padding: 0;
+}
+
 header {
   height: var(--header-height);
   background-color: #fff;
@@ -107,11 +114,6 @@ header div.header-right nav ul li {
 
 header div.header-right nav ul li a {
   color: var(--link-color-1);
-}
-
-#app {
-  width: 100%;
-  padding: 0;
 }
 
 .hero-banner {
@@ -232,6 +234,8 @@ footer {
   color: #fffe;
   opacity: 0.9;
   line-height: 1.5rem;
+  opacity: 0;
+  transition: opacity 1.0s;
 }
 
 footer section {
@@ -379,6 +383,77 @@ div.card .delete-button svg {
 }
 
 /*
+ * Forms
+ */
+
+.container form {
+  margin: 2rem 5rem;
+}
+
+form label {
+	display: block;
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+
+form input, form textarea, form select {
+	margin-bottom: 0.5rem;
+	width: 100%;
+	padding: 0.5rem 0.75rem;
+	font-size: 1rem;
+	border: 1px solid var(--border-color);
+	border-radius: 0.25rem;
+}
+
+form input[type="checkbox"] {
+	width: auto;
+}
+
+form input:focus, form textarea:focus, form select:focus {
+	border-color: var(--primary-color);
+	outline: 0;
+	box-shadow: 0 0 0 .20rem var(--primary-color);
+}
+
+.container form .action-button {
+  padding: 0.6rem;
+  border: 1px solid var(--primary-color);
+  background-color: var(--secondary-color);
+  color: #fff;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.3rem;
+  cursor: pointer;
+  font-size: 1.1rem;
+  margin-left: 0px;
+  margin-right: 0.2rem;
+}
+
+.container form .action-button svg {
+  width: 18px;
+  height: 18px;
+}
+
+.container form .secondary-button {
+  padding: 0.6rem;
+  border: 1px solid var(--border-color);
+  background-color: #fff;
+  color: #000;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.3rem;
+  cursor: pointer;
+  font-size: 1.1rem;
+  margin-left: 0;
+  margin-right: 0.2rem;
+}
+
+.container form .secondary-button svg {
+  width: 18px;
+  height: 18px;
+}
+
+/*
  * Utility
  */
 .fade-scroll-in {
@@ -411,3 +486,147 @@ div.card .delete-button svg {
   flex-basis: 100%;
   height: 0;
 }
+
+/*
+ * nerdalert
+ */
+.nerdalert-container {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  pointer-events: none;
+}
+
+.nerdalert-row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nerdalert-col {
+  flex: 1;
+  margin: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nerdalert-col.top-left,
+.nerdalert-col.bottom-left {
+  align-items: flex-start;
+}
+
+.nerdalert-col.top-right,
+.nerdalert-col.bottom-right {
+  align-items: flex-end;
+}
+
+.nerdalert-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  color: #000;
+  border-radius: 4px;
+  margin: 0px;
+  transition: 0.3s all ease-in-out;
+  pointer-events: all;
+  border-left: 3px solid #8b8b8b;
+  cursor: pointer;
+}
+
+.nerdalert-card.success {
+  border-left: 3px solid #6ec05f;
+}
+
+.nerdalert-card.warn {
+  border-left: 3px solid #fed953;
+}
+
+.nerdalert-card.info {
+  border-left: 3px solid #1271ec;
+}
+
+.nerdalert-card.error {
+  border-left: 3px solid #d60a2e;
+}
+
+.nerdalert-card .text-group {
+  margin-left: 15px;
+}
+
+.nerdalert-card h4 {
+  margin: 0;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.nerdalert-card p {
+  margin: 0;
+  font-size: 14px;
+}
+
+@media(max-width: 768px){ 
+  .nerdalert-col { flex: unset; } 
+} 
+
+/*
+ * nerdconfirm
+ */
+.nerdconfirm-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 20px;
+  background-color: #fff;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  color: #000;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  margin: 0px;
+  transition: 0.3s all ease-in-out;
+  pointer-events: all;
+  z-index: 100;
+  position: absolute;
+  flex-direction: column;
+}
+
+.nerdconfirm-container p {
+  margin-bottom: 0.5rem;
+}
+
+.nerdconfirm-container .button-container {
+  width: 100%;
+  height: 2.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: absolute;
+  bottom: 20px;
+}
+
+.nerdconfirm-container .button-container button {
+  height: 2.6rem;
+}
+
+/*
+ * nerdshim
+ */
+.shim {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: rgba(149, 149, 149, 0.5);
+	z-index: 99;
+}
+
