--- a/cmd/fireplacelogging/app/static/css/styles.css
+++ b/cmd/fireplacelogging/app/static/css/styles.css
@@ -673,3 +673,68 @@ form input:focus, form textarea:focus, form select:focus {
 .sun-editor {
   margin-bottom: 0.5rem;
 }
+
+/*
+ * nerdspinner
+ */
+.nerdspinner {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	background-color: rgba(149, 149, 149, 0.5);
+	z-index: 99;
+}
+
+.nerdspinner svg {
+  animation: 2s linear infinite nerdspinner-svg-animation;
+  max-width: 100px;
+  z-index: 100;
+  left: 50%;
+  top: 45%;
+  position: absolute;
+}
+
+@keyframes nerdspinner-svg-animation {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg)
+  }
+}
+
+.nerdspinner circle {
+  animation: 1.4s ease-in-out infinite both nerdspinner-circle-animation;
+  display: block;
+  fill: transparent;
+  stroke: #2f3d4c;
+  stroke-linecap: round;
+  stroke-dasharray: 283;
+  stroke-dashoffset: 280;
+  stroke-width: 10px;
+  transform-origin: 50% 50%;
+  z-index: 100;
+}
+
+@keyframes nerdspinner-circle-animation {
+  0%,
+  25% {
+    stroke-dashoffset: 280;
+    transform: rotate(0);
+  }
+  
+  50%,
+  75% {
+    stroke-dashoffset: 75;
+    transform: rotate(45deg);
+  }
+  
+  100% {
+    stroke-dashoffset: 280;
+    transform: rotate(360deg);
+  }
+}
+
+
