--- a/cmd/fireplacelogging/templates/layout.tmpl
+++ b/cmd/fireplacelogging/templates/layout.tmpl
@@ -1,10 +1,11 @@
+{{define "layout"}}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fireplace</title>
+  <title>{{.Title}} | Fireplace</title>
   <link rel="stylesheet" href="/static/js/libraries/nerd-js-library/base.min.css" />
   <link rel="stylesheet" href="/static/js/libraries/nerd-js-library/components.min.css" />
   <link rel="stylesheet" href="/static/css/styles.css" />
@@ -32,11 +33,13 @@
         </ul>
       </nav>
 
-      <member-login-bar></member-login-bar>
+      <member-login-bar login-path="/login"></member-login-bar>
     </div>
   </header>
 
-  <main id="app"></main>
+  <main>
+    {{template "content" .}}
+  </main>
 
   <footer>
     <section>
@@ -51,12 +54,17 @@
 
     <section>
       &copy; 2022 App Nerds LLC<br />
-      <a href="/auth/google">Sign in</a>
     </section>
   </footer>
 
-  <script src="/static/js/libraries/quill/quill.min.js"></script>
-  <script type="module" src="/main.js"></script>
-</body>
+  <script type="module" src="/static/js/pages/layout.js"></script>
+  {{range .RegularScripts}}
+    <script src="{{.}}"></script>
+  {{end}}
 
+  {{range .ModuleScripts}}
+    <script type="module" src="{{.}}"></script>
+  {{end}}
+</body>
 </html>
+{{end}}
