Almost converted to new Frame framework

--- a/cmd/fireplacelogging/templates/home.tmpl
+++ b/cmd/fireplacelogging/templates/home.tmpl
@@ -1,4 +1,6 @@
 {{template "layout" .}}
+{{define "title"}}Home{{end}}
+
 {{define "content"}}
   <section class="hero-banner">
     <div class="description">
