--- a/cmd/fireplacelogging/templates/view-logs.tmpl
+++ b/cmd/fireplacelogging/templates/view-logs.tmpl
@@ -1,4 +1,6 @@
 {{template "layout" .}}
+{{define "title"}}View Logs{{end}}
+
 {{define "content"}}
   <div class="container">
     <h2>View Logs</h2>
