--- a/cmd/fireplacelogging/templates/layout.tmpl
+++ b/cmd/fireplacelogging/templates/layout.tmpl
@@ -5,11 +5,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>{{.Title}} | Fireplace</title>
-  <link rel="stylesheet" href="/static/js/libraries/nerd-js-library/base.min.css" />
-  <link rel="stylesheet" href="/static/js/libraries/nerd-js-library/components.min.css" />
+  <title>{{template "title" .}} | Fireplace</title>
+  <link rel="stylesheet" href="/static/js/lib/frame/base.min.css" />
+  <link rel="stylesheet" href="/static/js/lib/frame/components.min.css" />
   <link rel="stylesheet" href="/static/css/styles.css" />
-  <link rel="stylesheet" href="/static/js/libraries/quill/quill.snow.css" />
+  <link rel="stylesheet" href="/static/js/lib/quill/quill.snow.css" />
 
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
@@ -33,7 +33,7 @@
         </ul>
       </nav>
 
-      <member-login-bar login-path="/login"></member-login-bar>
+      <member-login-bar login-path="/member/login"></member-login-bar>
     </div>
   </header>
 
@@ -58,12 +58,10 @@
   </footer>
 
   <script type="module" src="/static/js/pages/layout.js"></script>
-  {{range .RegularScripts}}
-    <script src="{{.}}"></script>
-  {{end}}
-
-  {{range .ModuleScripts}}
-    <script type="module" src="{{.}}"></script>
+  {{if .scripts}} 
+    {{range .scripts}}
+      <script type="{{.type}}" src="/static/js{{.src}}"></script>
+    {{end}}
   {{end}}
 </body>
 </html>
