--- a/cmd/fireplacelogging/templates/layout.tmpl
+++ b/cmd/fireplacelogging/templates/layout.tmpl
@@ -11,6 +11,12 @@
   <link rel="stylesheet" href="/static/css/styles.css" />
   <link rel="stylesheet" href="/static/js/lib/quill/quill.snow.css" />
 
+  {{if (IsSet "Stylesheets" .)}}
+    {{range .Stylesheets}}
+    <link rel="stylesheet" href="{{.}}" />
+    {{end}}
+  {{end}}
+
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
 </head>
