Added total page count

--- a/cmd/fireplacelogging/templates/view-logs.tmpl
+++ b/cmd/fireplacelogging/templates/view-logs.tmpl
@@ -34,7 +34,7 @@
     <section class="navigation-buttons">
       <button id="first" disabled><i data-feather="skip-back"></i> First Page</button>
       <button id="prev" disabled><i data-feather="arrow-left"></i> Previous Page</button>
-      <span id="page">Page 0</span>
+      <span id="page">Page 0 of 0</span>
       <button id="next" disabled>Next Page <i data-feather="arrow-right"></i></button>
       <button id="last" disabled><i data-feather="skip-forward"></i> Last Page</button>
     </section>
