--- a/cmd/fireplacelogging/templates/layout.tmpl
+++ b/cmd/fireplacelogging/templates/layout.tmpl
@@ -66,7 +66,7 @@
   <script type="module" src="/static/js/pages/layout.js"></script>
   {{if (IsSet "JavascriptIncludes" .)}} 
     {{range .JavascriptIncludes}}
-      <script type="{{.Type}}" src="/static/js{{.Src}}"></script>
+      <script type="{{.Type}}" src="{{.Src}}"></script>
     {{end}}
   {{end}}
 </body>
