--- a/cmd/fireplacelogging/templates/view-logs.tmpl
+++ b/cmd/fireplacelogging/templates/view-logs.tmpl
@@ -26,6 +26,24 @@
         <input type="text" id="search" disabled />
       </div>
 
+      <div>
+        <label for="dateFrom">Date From</label>
+        <input type="text" id="dateFrom" disabled />
+        <small>
+          Date format is <em>YYYY-MM-DDTHH:mm:dd</em><br/>
+          All dates/times are in UTC
+        </small>
+      </div>
+
+      <div>
+        <label for="dateTo">Date To</label>
+        <input type="text" id="dateTo" disabled />
+        <small>
+          Date format is <em>YYYY-MM-DDTHH:mm:dd</em><br/>
+          All dates/times are in UTC
+        </small>
+      </div>
+
       <div class="break"></div>
 
       <button id="btnClear"><i data-feather="refresh-cw"></i> Clear</button>
