--- a/cmd/fireplacelogging/frontend-templates/layout.tmpl
+++ b/cmd/fireplacelogging/frontend-templates/layout.tmpl
@@ -30,16 +30,18 @@
 
     <div class="header-right">
       <nav>
+        <label for="hamburger">&#9776;</label>
+        <input type="checkbox" id="hamburger"/>
+
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/#about">About</a></li>
           <li><a href="/#getfireplace">Get Fireplace</a></li>
           <li><a href="/view-logs">View Logs</a></li>
           <li><a href="/manage-servers">Manage Servers</a></li>
+          <li><member-login-bar login-path="/member/login"></member-login-bar></li>
         </ul>
       </nav>
-
-      <member-login-bar login-path="/member/login"></member-login-bar>
     </div>
   </header>
 
