--- a/cmd/fireplacelogging/frontend-templates/edit-server.tmpl
+++ b/cmd/fireplacelogging/frontend-templates/edit-server.tmpl
@@ -25,8 +25,8 @@
     <nav>
       <input type="hidden" id="description" name="description" value="{{.Server.Description}}" />
 
-      <button type="button" id="btnCancel">Cancel</button>
-      <button id="btnSave" class="action-button">Save</button>
+		<button type="button" id="btnCancel"><i class="icon--mdi icon--mdi--arrow-left"></i> Cancel</button>
+		<button id="btnSave" class="action-button"><i class="icon--mdi icon--mdi--content-save"></i> Save</button>
     </nav>
   </form>
 </div>
