--- a/cmd/fireplacelogging/frontend-templates/manage-servers.tmpl
+++ b/cmd/fireplacelogging/frontend-templates/manage-servers.tmpl
@@ -4,7 +4,7 @@
 {{define "content"}}
   <section class="container">
     <h2>Manage Servers</h2>
-    <button id="btnAddNewServer" class="action-button"><i data-feather="plus"></i> Add New Server</button>
+    <button id="btnAddNewServer" class="action-button"><i class="icon--mdi icon--mdi--plus"></i> Add New Server</button>
 
     <div id="servers" class="cards"></div>
   </section>
